Refactor endpoints (#259)